--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     </parent>
 
     <properties>
+        <commons.compress.version>1.19</commons.compress.version>
+        <commons.io.version>2.6</commons.io.version>
         <jackson.version>2.9.6</jackson.version>
         <jackson.lombok.version>1.1</jackson.lombok.version>
         <java.version>13</java.version>
@@ -24,6 +26,16 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.io.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>${commons.compress.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
