GPU enabled option for SavedModel loading.  Placeholder for LogicGates model.

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
         </dependency>
         <dependency>
             <groupId>org.tensorflow</groupId>
+            <artifactId>proto</artifactId>
+            <version>${tensorflow.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.tensorflow</groupId>
             <artifactId>libtensorflow_jni_gpu</artifactId>
             <version>${tensorflow.version}</version>
         </dependency>
