--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <jackson.version>2.10.1</jackson.version>
         <jackson.lombok.version>1.1</jackson.lombok.version>
         <java.version>13</java.version>
+        <jbool.expressions.version>1.23</jbool.expressions.version>
         <lombok.version>1.18.10</lombok.version>
         <tensorflow.version>1.15.0</tensorflow.version>
     </properties>
@@ -43,6 +44,12 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.bpodgursky</groupId>
+            <artifactId>jbool_expressions</artifactId>
+            <version>${jbool.expressions.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
