Cynthia, the Synthetic Intelligent Agent™, Version 1.0.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-io.cynthia.model.config=/var/cynthia/models/models.yaml
+cynthia.config=/var/cynthia/models/models.yaml
+cynthia.version=${project.version}
