--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <commons.io.version>2.6</commons.io.version>
         <commons.lang3.version>3.11</commons.lang3.version>
         <commons.math3.version>3.6.1</commons.math3.version>
+        <guava.version>30.0-jre</guava.version>
         <jackson.version>2.10.1</jackson.version>
         <jackson.lombok.version>1.1</jackson.lombok.version>
         <java.version>13</java.version>
@@ -43,6 +44,11 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
